--- a/Frequência.html
+++ b/Frequência.html
@@ -88,10 +88,10 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Funções</a>
+                <a class="nav-link active" aria-current="page" href="Notas.html">Lançar Nota</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Quem Somos</a>
+                <a class="nav-link" href="Frequência.html">Lançar Frequencia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Login.html">Sair</a>
