--- a/Notas.html
+++ b/Notas.html
@@ -96,17 +96,17 @@
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Início</a>
+          <a class="navbar-brand" href="Inicio.html">Início</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Funções</a>
+                <a class="nav-link active" aria-current="page" href="Notas.html">Lançar Nota</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Quem Somos</a>
+                <a class="nav-link" href="Frequência.html">Lançar Frequencia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Login.html">Sair</a>
