--- a/Frequência.html
+++ b/Frequência.html
@@ -81,7 +81,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Início</a>
+          <a class="navbar-brand" href="Inicio.html">Início</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -148,7 +148,7 @@
 <br>
 <tr>
     <th>01</th>
-    <th>Aline Vieira do Nascimento Motta</th>
+    <th>Aluno 1</th>
     <th><input type="checkbox" name="frequencia" id="frequencia"></th>
     <th><input type="checkbox" name="frequencia" id="frequencia"></th>
     <th><input type="checkbox" name="frequencia" id="frequencia"></th>
@@ -185,7 +185,7 @@
     <br>
 <tr>
     <th>02</th>
-    <th>Carlos Eduardo Benedito Motta</th>
+    <th>Aluno 2</th>
     <th><input type="checkbox" name="frequencia" id="frequencia"></th>
     <th><input type="checkbox" name="frequencia" id="frequencia"></th>
     <th><input type="checkbox" name="frequencia" id="frequencia"></th>
@@ -220,7 +220,7 @@
     <br>
 <tr>
     <th>03</th>
-    <th>Thaís Vieira do Nascimento</th>
+    <th>Aluno 3</th>
     <th><input type="checkbox" name="frequencia" id="frequencia"></th>
     <th><input type="checkbox" name="frequencia" id="frequencia"></th>
     <th><input type="checkbox" name="frequencia" id="frequencia"></th>
