--- a/Frequência.html
+++ b/Frequência.html
@@ -94,7 +94,7 @@
                 <a class="nav-link" href="Frequência.html">Lançar Frequencia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Login.html">Sair</a>
+                <a class="nav-link" href="index.html">Sair</a>
               </li>
             </ul>
             <span class="navbar-text">
