--- a/Notas.html
+++ b/Notas.html
@@ -109,7 +109,7 @@
                 <a class="nav-link" href="Frequência.html">Lançar Frequencia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Login.html">Sair</a>
+                <a class="nav-link" href="index.html">Sair</a>
               </li>
             </ul>
             <span class="navbar-text">
