--- a/Frequência.html
+++ b/Frequência.html
@@ -107,6 +107,24 @@
     <div class="titulo"><h1>Lançar Frequência</h1></div>
 
     <div class="fundo-nota">
+      
+      <select name="Mês" id="">
+
+        <option value="Janeiro">Janeiro</option>
+        <option value="fevereiro">Fevereiro</option>
+        <option value="fevereiro">Março</option>
+        <option value="fevereiro">Abril</option>
+        <option value="fevereiro">Maio</option>
+        <option value="fevereiro">Junho</option>
+        <option value="fevereiro">Julho</option>
+        <option value="fevereiro">Agosto</option>
+        <option value="fevereiro">Setembro</option>
+        <option value="fevereiro">Outubro</option>
+        <option value="fevereiro">Novembro</option>
+        <option value="fevereiro">Dezembro</option>
+
+      </select>
+
         <div class="table-responsive">
     <table class="table table-hover">
     <tr>
