--- a/Frequência.html
+++ b/Frequência.html
@@ -91,6 +91,23 @@
   overflow: auto;
   height: 100px;
 }
+
+.botao{
+        
+        width: 100%;
+        height: 40px;
+        cursor: pointer;
+        background: #6C63FF;
+        color: #fff;
+        border: 0;
+        border-radius: 20px;
+        transition: 1s;
+    }
+
+    .botao:hover {
+        background-color: #584ff5;
+
+    }
 </style>
 
 <body>
@@ -295,6 +312,10 @@
 
     <input class="enviar" type="submit" name="acao" value="ENVIAR">
     <input class="enviar" type="submit" name="acao" value="LIMPAR">
+
+    <div class="botao">
+      <a class="voltar" href="Inicio.html">Voltar</a>
+  </div>
 <br><br>
 </div>
 </div>
