frequencia alterada coments

--- a/Frequência.html
+++ b/Frequência.html
@@ -124,6 +124,7 @@
 
   }
 
+ 
   
 </style>
 
@@ -163,6 +164,12 @@
     <div class="select">
       <p>Selecione o Mês:</p>
       <input class="" type="date">
+    </div>
+<br><br><br>
+    <div>
+      <label for="floatingTextarea">O que foi aprendido hoje?</label> <br>
+      <textarea rows="10" cols="70" placeholder="Digite as atividades do dia" id="floatingTextarea"></textarea>
+      
     </div>
 
     <div class="table-responsive">
